--- a/mvvm.html
+++ b/mvvm.html
@@ -18,6 +18,8 @@
 <script src="./compile.js"></script>
 <script src="./mvvm.js"></script>
 <script>
+
+  // vue实现双向绑定 1.模板的编译 2. 数据劫持（观察数据变化）3.Watcher
   let vm = new MVVM({
     el: '#app',
     data: {
