--- a/mvvm.html
+++ b/mvvm.html
@@ -19,7 +19,7 @@
 <script src="./mvvm.js"></script>
 <script>
 
-  // vue实现双向绑定 1.模板的编译 2. 数据劫持（观察数据变化）3.Watcher
+  // vue实现双向绑定三部曲 1.模板的编译 2. 数据劫持（观察数据变化）3.Watcher
   let vm = new MVVM({
     el: '#app',
     data: {
